--- a/login.html
+++ b/login.html
@@ -6,18 +6,17 @@
 	<meta name="viwport" content="width=device-width, initial-scalet=1">
 	<link rel="stylesheet" href="style/login.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/a81368914c.js">
 	</script>
 </head>
 <body>
 	<img class="wave" scr="img/wave.png">
 	<div class="container">
 		<div class="img">
-			<img src="img/login2.svg">
+			<img src="img/login4.svg">
 		</div>
 		<div class="login-container">
 			<form action="cadastro.html">
-				<img class="avatar"src="img/avatar2.svg">
+				<img class="avatar"src="img/avatar3.svg">
 				<h2>Bem Vindo</h2>
 				<div class="input-div one ">
 					<div class="i">
@@ -38,11 +37,10 @@
 					</div>
 				</div>
 				<a href="#">Esqueceu sua senha?</a>
-				<input type="submit" class="btn" value="Entar">
+				<input type="submit" class="btn" value="Entrar">
 				<input type="submit" class="btn" value="Cadastre-se">
 			</form>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
