--- a/menuresponsivo2.html
+++ b/menuresponsivo2.html
@@ -11,21 +11,19 @@
 	<body>
 		<nav>
 			<h1 class="brand">
-				<a href="#"> Online Tutorials </a>	
+				<a href="#"> Blog Fashion </a>	
 			</h1>
 			<ul>
 				<li> <a href="#"> Home </a></li>
-				<li> <a href="#"> About </a></li>
-				<li> <a href="#"> Services </a></li>
-				<li> <a href="#"> Portifolio </a></li>
-				<li> <a href="#"> Contact </a></li>
-			
+				<li> <a href="cadastro.html"> Cadastro </a></li>
+				<li> <a href="login.html"> Login </a></li>
+				
 			</ul>
 			<div style="clear: both"></div>
 		</nav>
 		<div class="responsive-bar">
 			<h3 class="brand">
-				<a href="#"> Online Tutorials </a>	
+				<a href="#"> Blog Fashion </a>	
 			</h3>
 			<h4 class="menu"><i class="fa fa-bars"></i> </h4>
 			<div style="clear: both"></div>
